[package]
name = "interactive-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
